# snaptask

./: .gitignore  CHANGELOG.md  CLAUDE.md  KEYBOARD_SHORTCUT_SETUP.md  README.md  README_SCREENSHOT_ANALYZER.md  SNAPTASK_FILES.md  build_binary.sh  common.py  install.sh  pyproject.toml  requirements.txt  setup_shortcut.sh  snaptask.py  snaptask.spec  snaptask_cli.py  snaptask_vision.py  uninstall.sh
